--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lite": "lite-server --port 1480",
     "start": "npm run lite"
   },
-  "author": "",
+  "author": "melody li, jonathan lin, connor sweet, tibi andronescu",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^1.3.1"
